[tool.poetry]
name = "wonderland"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
arcade = "^2.1"
dataclasses = "^0.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
